--- a/faq.html
+++ b/faq.html
@@ -31,60 +31,71 @@
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="livestream.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
-            <a class="nav-link active" href="history.html">History</a>
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="history.html">History</a>
+            <a class="nav-link active" href="faq.html">FAQ</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- akhir navbar -->
 
-    <!-- grid history -->
-    <div class="container grid-history">
-      <div class="row g-3">
-        <div class="col-sm-12 col-md-6 col-lg-3">
+    <!-- grid faq -->
+    <div class="container grid-faq">
+      <div class="row g-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="img/CYQV2lYUQAA_Gas.jpg" class="card-img-top" alt="..." width="400" height="600" />
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2016</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="img/WhatsApp-Image-2018-09-10-at-9.31.37-AM-1.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2017</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="img/unnamed.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2018</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="img/download.jfif" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2019</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <!-- akhir grid history -->
 
     <!-- footer -->
-    <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
+    <footer class="text-center">
       <div class="container footer-content">
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
