--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="#">Marketplace</a>
-            <a class="nav-link" href="#">Ticket</a>
-            <a class="nav-link" href="#">Livestream</a>
-            <a class="nav-link" href="#">Lineup</a>
+            <a class="nav-link" href="marketplace.html">Marketplace</a>
+            <a class="nav-link" href="ticket.html">Ticket</a>
+            <a class="nav-link" href="livestream.html">Livestream</a>
+            <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link" href="#">FAQ</a>
+            <a class="nav-link" href="faq.html">FAQ</a>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
     <!-- akhir slider -->
 
     <!-- footer -->
-    <footer class="text-center">
+    <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
       <div class="container footer-content">
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
@@ -108,6 +108,12 @@
         } else {
           nav.classList.remove("bg-dark", "shadow");
         }
+      });
+
+      var button = document.querySelector(".navbar-toggler");
+
+      button.addEventListener("click", function () {
+        nav.classList.add("bg-dark", "shadow");
       });
     </script>
   </body>
