--- a/lineup.html
+++ b/lineup.html
@@ -30,8 +30,8 @@
             <a class="nav-link" href="marketplace.html">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="livestream.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
-            <a class="nav-link active" href="history.html">History</a>
+            <a class="nav-link active" href="lineup.html">Lineup</a>
+            <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
           </div>
         </div>
@@ -40,51 +40,42 @@
     <!-- akhir navbar -->
 
     <!-- grid history -->
-    <div class="container grid-history">
-      <div class="row g-3">
+    <div class="container grid-lineup">
+      <div class="row g-4">
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/CYQV2lYUQAA_Gas.jpg" class="card-img-top" alt="..." width="400" height="600" />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2016</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+          <div class="text-center">
+            <h5>Lineup 1</h5>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/WhatsApp-Image-2018-09-10-at-9.31.37-AM-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2017</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+          <div class="text-center">
+            <h5>Lineup 2</h5>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/unnamed.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2018</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+          <div class="text-center">
+            <h5>Lineup 3</h5>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/download.jfif" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2019</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+          <div class="text-center">
+            <h5>Lineup 4</h5>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
-        </div>
         </div>
       </div>
     </div>
     <!-- akhir grid history -->
 
     <!-- footer -->
-    <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
+    <footer class="text-center">
       <div class="container footer-content">
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
