--- a/ticket.html
+++ b/ticket.html
@@ -40,41 +40,35 @@
     <!-- akhir navbar -->
 
     <!-- grid history -->
-    <div class="container grid-history">
-      <div class="row g-3">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/CYQV2lYUQAA_Gas.jpg" class="card-img-top" alt="..." width="400" height="600" />
+    <div class="container grid-ticket">
+      <div class="row g-3 justify-content-center">
+        <div class="col-sm-6 col-lg-3">
+          <div class="card text-center pt-3">
+            <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2016</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/WhatsApp-Image-2018-09-10-at-9.31.37-AM-1.jpeg" class="card-img-top" alt="..." />
+        <div class="col-sm-6 col-lg-3">
+          <div class="card text-center pt-3">
+            <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2017</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/unnamed.jpg" class="card-img-top" alt="..." />
+        <div class="col-sm-6 col-lg-3">
+          <div class="card text-center pt-3">
+            <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2018</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/download.jfif" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2019</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
