--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="img/logojpg.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
-          Bootstrap
+          Bootstrap 5
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
