--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container about text-center py-5">
       <h2>Atma Asta</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi voluptatum modi minus vero ratione, mollitia non eos reiciendis voluptates accusantium aspernatur veritatis temporibus quos quidem ipsa dolor ea! Saepe, consequatur.
+        dsadsadsadsadasdsa ds voluptatum modi minus vero ratione, mollitia non eos reiciendis voluptates accusantium aspernatur veritatis temporibus quos quidem ipsa dolor ea! Saepe, consequatur.
       </p>
     </div>
     <!-- akhir about atma -->
