ticket & lineup Finishing

--- a/lineup.html
+++ b/lineup.html
@@ -40,7 +40,7 @@
     <!-- akhir navbar -->
 
     <!-- grid history -->
-    <div class="container grid-lineup">
+    <div class="container grid-lineup mt-4">
       <div class="row g-4">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
