--- a/ticket.html
+++ b/ticket.html
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="marketplace.html">Marketplace</a>
-            <a class="nav-link" href="ticket.html">Ticket</a>
+            <a class="nav-link active" href="ticket.html">Ticket</a>
             <a class="nav-link" href="livestream.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
-            <a class="nav-link active" href="history.html">History</a>
+            <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
           </div>
         </div>
@@ -40,7 +40,7 @@
     <!-- akhir navbar -->
 
     <!-- grid history -->
-    <div class="container grid-ticket">
+    <div class="container grid-ticket my-5">
       <div class="row g-3 justify-content-center">
         <div class="col-sm-6 col-lg-3">
           <div class="card text-center pt-3">
