navbar redirect to live.html fixed

--- a/live.html
+++ b/live.html
@@ -29,7 +29,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="marketplace.html">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link active" href="livestream.html">Livestream</a>
+            <a class="nav-link active" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
@@ -41,27 +41,25 @@
 
     <!-- grid live -->
     <div class="container grid-live">
-      <div class="row g-3">
-        <div class="col-sm-12 col-md-6 col-lg-8">
-           <!-- embed video -->
-            <div class="ratio ratio-16x9">
-              <iframe src="https://www.youtube.com/embed/59SnWcF7zW8rel=0" title="YouTube video" allowfullscreen></iframe>
-             </div>
-            <!-- akhir embed video -->
+      <div class="row g-3 justify-content-center">
+        <div class="col-sm-12 col-lg-8">
+          <!-- embed video -->
+          <div class="ratio ratio-16x9">
+            <iframe src="https://www.youtube.com/embed/59SnWcF7zW8rel=0" title="YouTube video" allowfullscreen></iframe>
+          </div>
+          <!-- akhir embed video -->
         </div>
-          <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2021</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Etherma</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">watch on youtube</a>
-            </div>
+        <div class="col-sm-12 col-lg-4 card" style="width: 18rem">
+          <div class="card-body">
+            <h5 class="card-title">Atma Asta 2021</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Etherma</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">watch on youtube</a>
+          </div>
         </div>
       </div>
     </div>
 
-
-    
     <!-- akhir live -->
 
     <!-- footer -->
