--- a/ticket.html
+++ b/ticket.html
@@ -29,7 +29,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="marketplace.html">Marketplace</a>
             <a class="nav-link active" href="ticket.html">Ticket</a>
-            <a class="nav-link" href="livestream.html">Livestream</a>
+            <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
