--- a/lineup.html
+++ b/lineup.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logojpg.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
+          <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
           Bootstrap
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
