--- a/ticket.html
+++ b/ticket.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-bg fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logojpg.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
+          <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
           Bootstrap
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
     <div class="container grid-ticket my-5">
       <div class="row g-3 justify-content-center">
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3">
+          <div class="card text-center pt-3 ticket-1">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2016</h5>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3">
+          <div class="card text-center pt-3 ticket-2">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2017</h5>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3">
+          <div class="card text-center pt-3 ticket-3">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
               <h5 class="card-title">Atma Asta 2018</h5>
