lineup & faq style, ganti icon footer

--- a/lineup.html
+++ b/lineup.html
@@ -38,10 +38,13 @@
       </div>
     </nav>
     <!-- akhir navbar -->
-
     <!-- grid history -->
-    <div class="container grid-lineup mt-4">
-      <div class="row g-4">
+    <div class="container grid-lineup mt-2">
+      <div class="lineup-title text-center">
+        <h2>OUR LINEUP</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsa?</p>
+      </div>
+      <div class="row g-4 mt-2">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
           <div class="text-center">
@@ -80,8 +83,8 @@
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
-          <a href="#"><i class="fab fa-youtube-square"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
