--- a/ticket.html
+++ b/ticket.html
@@ -43,32 +43,32 @@
     <div class="container grid-ticket my-5">
       <div class="row g-3 justify-content-center">
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3 ticket-1">
+          <div class="card text-center p-4 ticket-1">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2016</h5>
+              <h5 class="card-title">Presale 1</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary shadow">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3 ticket-2">
+          <div class="card text-center p-4 ticket-2">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2017</h5>
+              <h5 class="card-title">Presale 2</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary shadow">Go somewhere</a>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-lg-3">
-          <div class="card text-center pt-3 ticket-3">
+          <div class="card text-center p-4 ticket-3">
             <img src="img/b9dc143762700bee689092a1c96edc98.jpg" class="rounded-circle mx-auto" alt="..." width="100"/>
             <div class="card-body">
-              <h5 class="card-title">Atma Asta 2018</h5>
+              <h5 class="card-title">Presale 3</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary shadow">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -83,8 +83,8 @@
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
-          <a href="#"><i class="fab fa-youtube-square"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
