--- a/faq.html
+++ b/faq.html
@@ -41,9 +41,9 @@
 
     <!-- grid faq -->
     <div class="container grid-faq">
-      <div class="row g-4">
+      <div class="row g-2">
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #ffd596">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #f4ffb1">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #9edda9">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #9edda9">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #ffd596">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card p-3" style="background-color: #f4ffb1">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -100,8 +100,8 @@
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
-          <a href="#"><i class="fab fa-youtube-square"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
