--- a/live.html
+++ b/live.html
@@ -68,8 +68,8 @@
         <h5>Follow Us</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
-          <a href="#"><i class="fab fa-youtube-square"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
