--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
 
-    <title>Hello, world!</title>
+    <title>Atma Asta</title>
   </head>
   <body>
     <!-- navbar -->
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
-          Bootstrap
+          Atma Asta
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,9 +45,9 @@
         <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <img src="img/CYQV2lYUQAA_Gas.jpg" class="card-img-top" alt="..." width="400" height="600" />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2016</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card-body tmst2020" background-image:>
+              <h5 class="card-title">Atma Asta 2020</h5> <br><br><br>
+              <p class="card-text"> See More </p>
             </div>
           </div>
         </div>
