--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
 
-    <title>Hello, world!!!</title>
+    <title>Atma Asta</title>
   </head>
   <body>
     <!-- navbar -->
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
-          Bootstrap 5
+          Atma Asta
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,12 +52,18 @@
     <!-- akhir background video -->
 
     <!-- About atma -->
-    <div class="container about text-center py-5">
-      <h2>Atma Asta</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi voluptatum modi minus vero ratione, mollitia non eos reiciendis voluptates accusantium aspernatur veritatis temporibus quos quidem ipsa dolor ea! Saepe, consequatur.
-      </p>
-    </div>
+    <section id="about">
+      <div class="container about">
+        <div class="row justify-content-between text-center">
+          <div class="col-4"><h2>ATMA ASTA 2021</h2></div>
+          <div class="col-4"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p></div>
+        </div>
+      </div>
+    </section>
+  
     <!-- akhir about atma -->
 
     <!-- slider -->
