--- a/live.html
+++ b/live.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
+    <!-- font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
+    <!-- akhir font -->
 
     <title>Hello, world!</title>
   </head>
@@ -40,20 +45,20 @@
     <!-- akhir navbar -->
 
     <!-- grid live -->
-    <div class="container grid-live">
+    <div class="container grid-live pt-5">
       <div class="row g-3 justify-content-center">
         <div class="col-sm-12 col-lg-8">
           <!-- embed video -->
-          <div class="ratio ratio-16x9">
+          <div class="ratio ratio-16x9 border border-white border-5 ">
             <iframe src="https://www.youtube.com/embed/59SnWcF7zW8rel=0" title="YouTube video" allowfullscreen></iframe>
           </div>
           <!-- akhir embed video -->
         </div>
-        <div class="col-sm-12 col-lg-4 card" style="width: 18rem">
+        <div class="col-sm-12 col-lg-4 card bg-transparent text-center live-text">
           <div class="card-body">
             <h5 class="card-title">Atma Asta 2021</h5>
             <h6 class="card-subtitle mb-2 text-muted">Etherma</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text p-card-live">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="card-link">watch on youtube</a>
           </div>
         </div>
