--- a/index.html
+++ b/index.html
@@ -99,28 +99,10 @@
     </footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <script>
-      var nav = document.querySelector("nav");
-
-      window.addEventListener("scroll", function () {
-        if (this.window.pageYOffset > 100) {
-          nav.classList.add("navbar-bg", "shadow");
-        } else {
-          nav.classList.remove("navbar-bg", "shadow");
-        }
-      });
-
-      var button = document.querySelector(".navbar-toggler");
-
-      if (this.window.pageYOffset <= 100) {
-        button.addEventListener("click", function () {
-          if (nav.classList.contains("navbar-bg")) {
-            nav.classList.remove("navbar-bg", "shadow");
-          } else {
-            nav.classList.add("navbar-bg", "shadow");
-          }
-        });
-      }
+      navbarbg();
+      navbarcollapse();
     </script>
   </body>
 </html>
