--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Snippet&display=swap" rel="stylesheet" />
+
     <title>Atma Asta</title>
   </head>
   <body>
@@ -52,18 +57,20 @@
     <!-- akhir background video -->
 
     <!-- About atma -->
-    <section id="about">
+    <section class="about-bg py-3">
       <div class="container about">
         <div class="row justify-content-between text-center">
-          <div class="col-4"><h2>ATMA ASTA 2021</h2></div>
-          <div class="col-4"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.</p></div>
+          <div class="col-sm-12 col-lg-4 about-text"><h2>ATMA ASTA 2021</h2></div>
+          <div class="col-sm-12 col-lg-4">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </p>
+          </div>
         </div>
       </div>
     </section>
-  
+
     <!-- akhir about atma -->
 
     <!-- slider -->
@@ -94,7 +101,7 @@
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
       <div class="container footer-content">
-        <h5>Follow Us</h5>
+        <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
