--- a/lineup.html
+++ b/lineup.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -38,7 +43,7 @@
       </div>
     </nav>
     <!-- akhir navbar -->
-    <!-- grid history -->
+    <!-- grid lineup -->
     <div class="container grid-lineup mt-2">
       <div class="lineup-title text-center">
         <h2>OUR LINEUP</h2>
@@ -80,7 +85,7 @@
     <!-- footer -->
     <footer class="text-center">
       <div class="container footer-content">
-        <h5>Follow Us</h5>
+        <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
