--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Snippet&display=swap" rel="stylesheet" />
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -97,7 +102,7 @@
     <!-- footer -->
     <footer class="text-center">
       <div class="container footer-content">
-        <h5>Follow Us</h5>
+        <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
