--- a/live.html
+++ b/live.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="fixed.css" />
+
     <!-- font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Snippet&display=swap" rel="stylesheet" />
+
     <!-- akhir font -->
 
     <title>Hello, world!</title>
@@ -49,7 +52,7 @@
       <div class="row g-3 justify-content-center">
         <div class="col-sm-12 col-lg-8">
           <!-- embed video -->
-          <div class="ratio ratio-16x9 border border-white border-5 ">
+          <div class="ratio ratio-16x9 border border-white border-5">
             <iframe src="https://www.youtube.com/embed/59SnWcF7zW8rel=0" title="YouTube video" allowfullscreen></iframe>
           </div>
           <!-- akhir embed video -->
@@ -70,7 +73,7 @@
     <!-- footer -->
     <footer class="text-center">
       <div class="container footer-content">
-        <h5>Follow Us</h5>
+        <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
@@ -79,7 +82,7 @@
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
     </footer>
-    
+
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
