--- a/history.html
+++ b/history.html
@@ -33,7 +33,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="marketplace.html">Marketplace</a>
+            <a class="nav-link" href="shopee.co.id/atma.asta">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
@@ -91,9 +91,9 @@
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
-      <div class="container footer-content">
+      <div class="container footer-content d-flex flex-column align-items-center justify-content-center" style="height: 100%">
         <h5>FOLLOW US</h5>
-        <div class="icons mx-auto d-flex justify-content-evenly">
+        <div class="icons mx-auto d-flex flex-inline justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
           <a href="#"><i class="fab fa-tiktok"></i></a>
