--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="marketplace.html">Marketplace</a>
+            <a class="nav-link" href="shopee.co.id/atma.asta">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
@@ -57,11 +57,11 @@
     <!-- akhir background video -->
 
     <!-- About atma -->
-    <section class="about-bg py-3">
+    <section class="about-bg py-5">
       <div class="container about">
-        <div class="row justify-content-between text-center">
-          <div class="col-sm-12 col-lg-4 about-text"><h2>ATMA ASTA 2021</h2></div>
-          <div class="col-sm-12 col-lg-4">
+        <div class="row justify-content-between text-center p-4">
+          <div class="col-sm-12 col-lg-4 about-text align-self-center"><h2>ATMA ASTA 2021</h2></div>
+          <div class="col-sm-12 col-lg-4 about-text align-self-center">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat.
@@ -100,9 +100,9 @@
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
-      <div class="container footer-content">
+      <div class="container footer-content d-flex flex-column align-items-center justify-content-center" style="height: 100%">
         <h5>FOLLOW US</h5>
-        <div class="icons mx-auto d-flex justify-content-evenly">
+        <div class="icons mx-auto d-flex flex-inline justify-content-evenly">
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
           <a href="#"><i class="fab fa-tiktok"></i></a>
