--- a/lineup.html
+++ b/lineup.html
@@ -32,7 +32,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="marketplace.html">Marketplace</a>
+            <a class="nav-link" href="shopee.co.id/atma.asta">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link active" href="lineup.html">Lineup</a>
@@ -83,7 +83,18 @@
     <!-- akhir grid history -->
 
     <!-- footer -->
-    <footer class="text-center">
+    <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
+      <div class="container footer-content d-flex flex-column align-items-center justify-content-center" style="height: 100%">
+        <h5>FOLLOW US</h5>
+        <div class="icons mx-auto d-flex flex-inline justify-content-evenly">
+          <a href="#"><i class="fab fa-instagram-square"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-tiktok"></i></a>
+        </div>
+        <p>©2021. Atma Asta. All Rights Reserved.</p>
+      </div>
+    </footer>
+    <!-- <footer class="text-center">
       <div class="container footer-content">
         <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex justify-content-evenly">
@@ -93,7 +104,7 @@
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
-    </footer>
+    </footer> -->
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
