landing,history,livestream

--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
     <!-- Bootstrap CSS -->
     <script src="https://kit.fontawesome.com/b249d00227.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/bootstrap-5.0.1-dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="fixed.css" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Snippet&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <title>Atma Asta</title>
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
-          Atma Asta
+        <a class="navbar-brand align-midle" href="index.html">
+          <img src="img/logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="shopee.co.id/atma.asta">Marketplace</a>
+            <a class="nav-link" href="https://shopee.co.id/atma.asta">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
@@ -59,8 +61,14 @@
     <!-- About atma -->
     <section class="about-bg py-5">
       <div class="container about">
-        <div class="row justify-content-between text-center p-4">
-          <div class="col-sm-12 col-lg-4 about-text align-self-center"><h2>ATMA ASTA 2021</h2></div>
+        <div class="row justify-content-between text-center p-4 about-content">
+          <div class="col-sm-12 col-lg-4 about-text align-self-center">
+            <h2>
+              ATMA ASTA<br />
+              2021
+            </h2>
+            <br />
+          </div>
           <div class="col-sm-12 col-lg-4 about-text align-self-center">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
