--- a/lineup.html
+++ b/lineup.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="fixed.css" />
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Mulish&family=Snippet&display=swap" rel="stylesheet">
 
     <title>Hello, world!</title>
   </head>
@@ -44,43 +44,36 @@
     </nav>
     <!-- akhir navbar -->
     <!-- grid lineup -->
-    <div class="container grid-lineup mt-2">
-      <div class="lineup-title text-center">
-        <h2>OUR LINEUP</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsa?</p>
-      </div>
-      <div class="row g-4 mt-2">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
-          <div class="text-center">
-            <h5>Lineup 1</h5>
-            <p>Lorem ipsum dolor sit amet.</p>
+        <div class="container grid-lineup mt-2">
+          <div class="lineup-title text-center">
+            <h2>OUR LINEUP</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsa?</p>
+          </div>
+          <div class="row g-4 mt-2 justify-content-evenly" >
+            <div class="col-sm-10 col-md-6 col-lg-2">
+              <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+              <div class="text-center">
+                <h5>Lineup 1</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+            <div class="col-sm-10 col-md-6 col-lg-2">
+              <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+              <div class="text-center">
+                <h5>Lineup 2</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+            <div class="col-sm-10 col-md-6 col-lg-2">
+              <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
+              <div class="text-center">
+                <h5>Lineup 3</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
-          <div class="text-center">
-            <h5>Lineup 2</h5>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
-          <div class="text-center">
-            <h5>Lineup 3</h5>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <img class="lineup-image img-fluid bg-dark" src="img/b9dc143762700bee689092a1c96edc98.jpg" alt="" />
-          <div class="text-center">
-            <h5>Lineup 4</h5>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- akhir grid history -->
+        <!-- akhir grid lineup -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
