--- a/live.html
+++ b/live.html
@@ -20,7 +20,7 @@
 
     <!-- akhir font -->
 
-    <title>Hello, world!</title>
+    <title>Atma Asta</title>
   </head>
   <body>
     <!-- navbar -->
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="img/logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top" />
-          Bootstrap
+          ATMA ASTA
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,8 +48,8 @@
     <!-- akhir navbar -->
 
     <!-- grid live -->
-    <div class="container grid-live pt-5">
-      <div class="row g-3 justify-content-center">
+    <div class="container grid-live pt-4">
+      <div class="row g-3 justify-content-center align-items-center">
         <div class="col-sm-12 col-lg-8">
           <!-- embed video -->
           <div class="ratio ratio-16x9 border border-white border-5">
@@ -57,7 +57,7 @@
           </div>
           <!-- akhir embed video -->
         </div>
-        <div class="col-sm-12 col-lg-4 card bg-transparent text-center live-text">
+        <div class="col-sm-12 col-lg-4 card bg-transparent text-center live-text border-0">
           <div class="card-body">
             <h5 class="card-title">Atma Asta 2021</h5>
             <h6 class="card-subtitle mb-2 text-muted">Etherma</h6>
