--- a/history.html
+++ b/history.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="fixed.css" />
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Snippet&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Snippet&display=swap" rel="stylesheet" />
 
     <title>Atma Asta</title>
   </head>
@@ -48,42 +47,57 @@
     <!-- grid history -->
     <div class="container grid-history">
       <div class="row g-3">
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
-            <img src="img/CYQV2lYUQAA_Gas.jpg" class="card-img-top" alt="..." width="400" height="600" />
-            <div class="card-body tmst2020" background-image:>
-              <h5 class="card-title">Atma Asta 2020</h5> <br><br><br>
-              <p class="card-text"> See More </p>
+            <!-- embed video atma 2016-->
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/lVeYGpdW9LM" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst1.png)">
+              <h5 class="card-title">Atma Asta 2016</h5>
+              <p class="card-text">See More</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
-            <img src="img/WhatsApp-Image-2018-09-10-at-9.31.37-AM-1.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Atma Asta 2017</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <!-- embed video atma 2018-->
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
             </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <img src="img/unnamed.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst2.png)">
               <h5 class="card-title">Atma Asta 2018</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">See More</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
-            <img src="img/download.jfif" class="card-img-top" alt="..." />
-            <div class="card-body">
+            <!-- embed video atma 2019-->
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/59SnWcF7zW8" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst3.png)">
               <h5 class="card-title">Atma Asta 2019</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">See More</p>
             </div>
           </div>
         </div>
+        <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="card">
+            <!-- embed video atma 2020-->
+            <div class="ratio ratio-16x9">
+              <iframe src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst4.png)">
+              <h5 class="card-title">Atma Asta 2020</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
