--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="overlay-image" style="background-image: url(img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg)"></div>
+          <img class="img-fluid" src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" alt="" />
         </div>
         <div class="carousel-item">
           <div class="overlay-image" style="background-image: url(img/pien-muller-Fh-Q-xfdh_o-unsplash.jpg)"></div>
